fixed ticker overflow

--- a/components/ticker.module.scss
+++ b/components/ticker.module.scss
@@ -1,5 +1,6 @@
 .section {
   display: flex;
+  overflow: hidden;
 }
 
 .head {
